--- a/proizvodi.html
+++ b/proizvodi.html
@@ -545,7 +545,7 @@ iframe.goog-te-banner-frame { display: none !important; }
 
          
             <!-- Дугме – Font Awesome голуб -->
-    <a href="golubovi.html" class="pigeon-btn" aria-label="Такмичарски голубови">
+    <a href="https://upsiteful.github.io/Bolesnikov-racing-pigeons/" class="pigeon-btn" aria-label="Такмичарски голубови">
         <i class="fa-solid fa-dove"></i>
     </a>
  <div class="lang-switcher" id="langSwitcher">
@@ -846,3 +846,4 @@ iframe.goog-te-banner-frame { display: none !important; }
 
 </body>
 </html>
+
