--- a/index.html
+++ b/index.html
@@ -1056,11 +1056,11 @@ iframe.goog-te-banner-frame { display: none !important; }
         </div>
 
         <nav aria-label="Главна навигација">
-            <a href="#hero">Насловна</a>
+            <a href="index.html">Насловна</a>
             <a href="#about">О златари</a>
             <a href="#services">Услуге</a>
             <a href="proizvodi.html">Колекција</a>
-            <a href="#contact">Контакт</a>
+           
 
          
             <!-- Дугме – Font Awesome голуб -->
@@ -1574,4 +1574,5 @@ iframe.goog-te-banner-frame { display: none !important; }
 
 </body>
 </html>
+
 
