--- a/proizvod.html
+++ b/proizvod.html
@@ -590,11 +590,11 @@ iframe.goog-te-banner-frame { display: none !important; }
         </div>
 
         <nav aria-label="Главна навигација">
-            <a href="index.html#hero">Насловна</a>
+            <a href="index.html">Насловна</a>
             <a href="index.html#about">О златари</a>
             <a href="index.html#services">Услуге</a>
             <a href="proizvodi.html">Колекција</a>
-            <a href="index.html#contact">Контакт</a>
+         
 
          
             <!-- Дугме – Font Awesome голуб -->
@@ -1030,4 +1030,5 @@ currentProductCode = (p.code || "").toString().trim();
 
 </body>
 </html>
+
 
