--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,7 @@ iframe.goog-te-banner-frame { display: none !important; }
                  src="galerija2.jpg"
                  alt="Накит на радном столу">
             <img class="gallery-item"
-                 src="slika3.jpg"
+                 src="vanja bolesnikov.jpg"
                  alt="Изложени комади у витрини">
         </div>
     </section>
@@ -1574,5 +1574,6 @@ iframe.goog-te-banner-frame { display: none !important; }
 
 </body>
 </html>
+
 
 
