--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@ iframe.goog-te-banner-frame { display: none !important; }
                 </p>
 
                 <div style="margin-top:18px;">
-                    <a href="golubovi.html" class="btn-ghost">
+                    <a href="https://upsiteful.github.io/Bolesnikov-racing-pigeons/" class="btn-ghost">
                         сазнајте више о голубовима
                     </a>
                 </div>
@@ -1574,6 +1574,7 @@ iframe.goog-te-banner-frame { display: none !important; }
 
 </body>
 </html>
+
 
 
 
