--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ iframe.goog-te-banner-frame { display: none !important; }
                 комад има своју причу.
             </p>
             <div class="hero-cta">
-                <a href="#pieces" class="btn-primary">погледај колекцију</a>
+                <a href="proizvodi.html" class="btn-primary">погледај колекцију</a>
                 <a href="#services" class="btn-ghost">поправка накита</a>
             </div>
             <div class="hero-meta">
@@ -1584,6 +1584,7 @@ iframe.goog-te-banner-frame { display: none !important; }
 
 </body>
 </html>
+
 
 
 
